[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/characters/MiniOrc1.png" type="Texture" id=1]
[ext_resource path="res://scripts/MiniBossEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 13.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.625, 7 )

[node name="MiniBossEnemy" type="KinematicBody2D" groups=["Enemy"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." groups=["Enemy"]]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector" groups=["Enemy"]]
position = Vector2( -37, 0.5 )
shape = SubResource( 2 )

[node name="AttackDetector" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector" groups=["Enemy"]]
position = Vector2( -34.375, 0 )
shape = SubResource( 3 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
